workspace = { members = ["bournemacro"] }
[package]
name = "bourne"
description = "A simple JSON library."
repository = "https://github.com/ErisianArchitect/bourne"
readme = "README.md"
categories = ["encoding", "parser-implementations"]
keywords = ["json"]
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
preserve_order = ["dep:indexmap"]

[dependencies]
indexmap = { version = "2.2.6", optional = true }
thiserror = "1.0.61"
bournemacro = { path = "bournemacro", version = "0.1.0" }
hashbrown = "0.14.5"
