[package]
name = "bournemacro"
description = "A json proc-macro for use with the bourne cratecd."
repository = "https://github.com/ErisianArchitect/bourne"
readme = "README.md"
categories = ["parsing", "encoding"]
keywords = ["json", "macro"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.83"
quote = "1.0.36"
syn = { version = "2.0.65", features = ["full", "visit-mut", "visit", "fold"] }